# ardrone_gestures_demo

./: README.md  README.txt
ardrone_swarm/: .pydevproject  CMakeLists.txt  manifest.xml  setup.sh
ardrone_swarm/launch/: ardrone_LED.launch  box.launch  detector.launch  detector_2.launch  drone.launch  drone_2.launch  keyboard_controller_with_tags.launch  map_marker.launch
ardrone_swarm/msg/: Drone_info.msg  led.msg
ardrone_swarm/src/: GestureSequenceClassifierTest.cpp  GestureSimple.cpp  calib.cpp  detectorNode.cpp  detectorNode2.cpp  detectorNode3.cpp  detectorNodeBig.cpp  detectorNode_face.cpp  image_grabber.cpp  model.txt  svm.cpp
ardrone_swarm/src/GestureSequenceUbuntu/: GestureSequenceMotionFinal_Alessandro.cpp  model-direction.txt  svm.cpp  svm.h  test
ardrone_swarm/src/ardrone_swarm/: GestureSimple.cpp
ardrone_swarm/src/ardrone_swarm/msg/: _Drone_info.py  _Position.py  __init__.py  _led.py
ardrone_swarm/src/scripts/: controller.py  controller_main.py  controllers_misc.py  detectorNodeBig.cpp  drone_info.py  drone_video_display2.py  keyboard_controller.py  pink_3.txt  printer2.py  sounds.py  state_estimation.py  utils.py
direction_beta/: CMakeLists.txt
direction_beta/launch/: control_node.launch
direction_beta/msg/: direction_msgs.msg
direction_beta/src/: control_node.cpp  sim_control_node (copia).cpp  sim_control_node.cpp  sim_node.cpp  sim_node_beta.cpp
drone_control_msgs/msg/: send_control_data.msg
drone_control_position/: CMakeLists.txt  package.xml
drone_control_position/launch/: control_node.launch  following_leader.launch  sim_control_node.launch  sim_following_leader.launch
drone_control_position/src/: control_node.cpp  following_leader.cpp  sim_control_node.cpp  sim_following_leader.cpp
drone_following_leader/launch/: following_node.launch  sim_following_node.launch
drone_following_leader/src/: following_leader.cpp
drone_gesture_demo/: CMakeLists.txt  package.xml
drone_gesture_demo/bundles/: box.xml  box_2.xml  box_3.xml  hat.xml  room_tag_left.xml  tag_to_follow.xml
drone_gesture_demo/calibration/: color.txt  def_calib.txt
drone_gesture_demo/cvBlobsLib/include/: Blob.h  BlobContour.h
drone_gesture_demo/launch/: detector.launch  drone.launch  keyboard_controller.launch  test.launch  test_maker.launch  vision.launch
drone_gesture_demo/scripts/: ardrone_feedback.py  controller.py  controller_main.py  controllers_misc.py  drone_info.py  drone_video_display2.py  grammar_parser.py  keyboard_controller.py  pid.py  sounds.py  state_estimation.py  tag.py
drone_gesture_demo/src/: detectorNodeBig.cpp  vision.cpp
drone_gestures_demo/: package.xml
drone_gestures_demo/cvBlobsLib/include/: BlobResult.h
drone_gestures_demo/launch/: detector.launch  drone.launch
drone_gestures_demo/scripts/: controller.py  controller_main.py  drone_info.py  drone_video_display2.py  keyboard_controller.py  sounds.py  state_estimation.py
drone_gestures_demo/src/: detectorNode.cpp
drone_position_control/: CMakeLists.txt  package.xml
drone_position_control/launch/: control_node.launch
drone_position_control/src/: control_node.cpp  sim_control_node.cpp
messages/: CMakeLists.txt  package.xml
messages/msg/: Position.msg  RigidBodyData.msg  VisionGestures.msg  leader_info.msg  vision_gestures.msg
send_control_position/src/: control_data.cpp
sim_optitrack/: CMakeLists.txt  package.xml
sim_optitrack/launch/: test.launch
sim_optitrack/src/: optitrack_simulator.cpp
sim_optitrack_msgs/: CMakeLists.txt  package.xml
sim_optitrack_msgs/msg/: Marker.msg  SimRigidBodyData.msg
simulation_worlds/: CMakeLists.txt  package.xml
simulation_worlds/Media/models/: billboard_tree_2.dae  planes.dae  tent2.dae
simulation_worlds/Media/models/stl/: tent2.stl
simulation_worlds/launch/: sala_movimento.launch
simulation_worlds/models/: ground_plane.model
simulation_worlds/worlds/: obstacles.world  sala_movimento.world
