<?xml version="1.0"?>
<package>
  <name>sim_optitrack</name>
  <version>0.0.0</version>
  <description>The sim_optitrack package</description>

  <maintainer email="jrodriguez@idsia.ch">Juan Rodriguez</maintainer>

  <license>TODO</license>

  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>optitrack_msgs</build_depend>


  <run_depend>gazebo_ros</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>optitrack_msgs</run_depend>

  <export>

  </export>
</package>
